--- a/Practicum PartI_AngieZhang.Rmd
+++ b/Practicum PartI_AngieZhang.Rmd
@@ -269,9 +269,288 @@ head(all$df_cond)
 
 Min and max dates that indicate that (>9months)
 
+##Step 8. Create dataframe inclusive of pregnancy and birth control durations
 
+### 8.1 Combine pregnancy data with encounters.
 
+```{r}
+#Create an encounters data.frame for female patients with binary variables indicating bc and pregnancy. Date variable now reads as a date with lubridate ymd() call.
+encount_fem <- encount %>%
+  filter(PATIENT %in% female$ID) %>%
+  mutate(bc.yes = ifelse(PATIENT %in% meds_bc$PATIENT, 1,0), pg.yes = ifelse(PATIENT %in% all$PATIENT, 1,0), DATE = ymd(DATE)) %>%
+  group_by(PATIENT) %>%
+  mutate(en.first = min(DATE), en.last = max(DATE)) %>% 
+  ungroup() %>%
+  group_by(PATIENT, REASONCODE) %>%
+  mutate(pg.start = case_when(DESCRIPTION %in% obs2 | REASONDESCRIPTION %in% obs ~ min(DATE)), pg.stop = case_when(DESCRIPTION %in% obs2 | REASONDESCRIPTION %in% obs ~ max(DATE))) %>%
+  mutate(pg.length = pg.stop - pg.start)
 
+length(unique(encount_fem$PATIENT)) #720 - When comparing with above, notice that 1 female patient never came in for an encounter.
 
+#Check to make sure all patients ever on birth control are present.
+length(unique(encount_fem$PATIENT[encount_fem$bc.yes==1])) #246 unique bc users, which matches above. 
 
+##Issue - I tried to write a statement setting the length above and the filtered statement checking the number of patients on bc (see line 71) equalivant so the output would print TRUE if correct (essentially to automate checking my work), but it didn't work. Thoughts on how to structure that?
+
+#Check to make sure all patients ever pregnant are present.
+length(unique(encount_fem$PATIENT[encount_fem$pg.yes==1])) #191 unique pregnancies, which matches above.
+
+#Check if there are any women who were pregnant twice...
+double_pg1 <- encount_fem %>% mutate(pg.length = as.numeric(pg.length)) %>%
+  filter(pg.length > 252)
+n_distinct(double_pg1$PATIENT) #74 patients had pregnancy-related visits longer than 9 months.
+
+#Given that prenatal care + pregnancy lasts longer than 9 months, let's look at any pregnancy-related visits that could have lasted longer than a year.
+double_pg2 <- encount_fem %>% mutate(pg.length = as.numeric(pg.length)) %>%
+  filter(pg.length > 365)
+n_distinct(double_pg2$PATIENT) #73 women probably had more than on pregnancy. 
+double_pg2
+
+##Issue - how to recode to separate out each pregnancy? 
+```
+
+How to address (recode) 73 patients with multiple pregnancies to be discussed. 
+
+### 8.2 Combine encount_fem data.frame with birth control data.
+
+Also creating bc categorical variable, bc_type. Note bc category types vary slightly from those suggested by Angie! (Pill is separated into two groups.)
+
+```{r}
+colnames(encount_fem)[1] <- "en.id"
+colnames(encount_fem)[2] <- "en.date"
+colnames(encount_fem)[4] <- "en.code"
+colnames(encount_fem)[5] <- "en.descr"
+colnames(encount_fem)[6] <- "en.reasoncode"
+colnames(encount_fem)[7] <- "en.reasondescr"
+
+names(meds_bc)
+durations <- merge(x=encount_fem, y=meds_bc[, c("PATIENT", "START", "STOP", "ENCOUNTER", "CODE.bc", "DESCRIPTION.bc")], by="PATIENT", all.x=TRUE)
+
+names(durations)
+
+colnames(durations)[15] <- "bc.start"
+colnames(durations)[16] <- "bc.stop"
+colnames(durations)[17] <- "meds.encount"
+colnames(durations)[18] <- "bc.code"
+colnames(durations)[19] <- "bc.descrip"
+
+tbl_df(durations)
+
+#Add categorical variable for bc type, change variable type of bc.start and bc.stop to dates, and create bc.length. 
+durations <- durations %>% 
+  mutate(bc.type = case_when(bc.code==1000158 | bc.code==1000128 ~ "injection",
+                             bc.code==1856546 | bc.code==1605257 | bc.code==807283 ~ "IUD", 
+                             bc.code==646250 | bc.code==1111011 ~ "implant", 
+                             bc.code==1367439 ~ "ring", 
+                             bc.code==748962 | bc.code==831533 | bc.code==1359133 | bc.code==757594 | bc.code==748879 | bc.code==235389 | bc.code==749785 | bc.code==751905 | bc.code==748856 ~ "pill28", 
+                             bc.code==749762 ~ "pill91"))
+durations <- durations %>% mutate(bc.start = mdy(bc.start), bc.stop = mdy(bc.stop))
+
+durations <- durations %>% mutate(bc.length = bc.stop - bc.start)
+durations$bc.length <- as.numeric(durations$bc.length)
+
+#Issue - is there a more elegant way to mutate all of the above in one? I tried adding those new variable calls to the original line of code, but unless they were separated out, all dates failed to parse.
+
+#Double checking my new bc.length variable. 
+summary(durations$bc.length) 
+
+#A duration of -36159 doesn't seem right and 8364 NAs to be reviewed (note some of those are women who were never on bc).
+
+durations %>%
+  count(bc.length < 0) #confirmation that there is only one patient with a negative bc length. 
+
+#In exploring that patient further, her bc.start date is 2068-01-06.
+```
+
+```{r}
+#Reviewing patients to identify those whose bc start dates are impossible. 
+durations %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  arrange(desc(bc.start))
+```
+
+Removing the following four patients:
+
+* Number a8b24df6-d727-45d2-b269-cf482c17a402 
+  + encounter ID number 2d536593-07c9-4ec1-b2af-1dc97848718a. 
+  + Her bc start date is 2068-01-06 and end date is 1969-01-06. 
+  + Her only encounter date in the whole dataset is 1974-04-28.
+  
+* Number f88d0d0e-614b-4ab2-aae4-12d103778e0a
+  + encounter ID number b6d96fcf-2c8c-49f8-8ae9-f60ee08e89d6. 
+  + Her bc start date is 2064-12-10 and end date is NA. 
+  + Her only encounter date was 1965-04-05.
+
+* Number 492624fb-49dc-4e16-b6b9-b41619934cd4
+  + encounter ID number ed48dc44-8afd-491d-aea6-bb0566f6dd3c
+  + Her bc start date is 2064-12-11.
+  + Her only encounter date was 1982-01-18.
+
+* Number cf9a3357-e145-480e-a2b9-7f9c595b9783
+  + encounter ID number 6d371dd4-044e-4201-82da-f82555f471da
+  + Her bc start date is 2060-10-29.
+  + Her only encounter date was 1961-01-23.
+
+Issue - does this mean these patients should be removed from Angie's data.frames? Should I have dealt with these differently (e.g. recode them as just not on birth control)? 
+
+```{r}
+tail(durations %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  arrange(desc(bc.start)))
+
+#Removing the four patients whose bc start dates don't make sense. That should reduce the number of patients who ever used birth control to 242.
+
+remove <- c("a8b24df6-d727-45d2-b269-cf482c17a402", "f88d0d0e-614b-4ab2-aae4-12d103778e0a", "492624fb-49dc-4e16-b6b9-b41619934cd4", "cf9a3357-e145-480e-a2b9-7f9c595b9783")
+
+durationsFV <- durations %>%
+  filter(!PATIENT %in% remove)
+length(unique(durationsFV$PATIENT[durationsFV$bc.yes==1])) #242, lovely. 
+
+durationsFV %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  arrange(bc.start)
+```
+
+Notice there are a lot (223) of women whose first encounter date proceeds their bc.start date. Will this will be an issue if we use first encounter date to set age (as discussed last week)?
+
+```{r}
+#How many women have a bc prescription date that proceeds their first encounter date? 
+
+durationsFV %>% 
+  filter(bc.yes==1, bc.start > en.first) %>%
+  group_by(PATIENT) %>%
+  summarize(n_distinct(PATIENT)) %>%
+  tally(n()) #223
+```
+
+```{r}
+#What about those bc.length NA patients? 
+durationsFV %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  filter(is.na(bc.length))
+
+durationsFV %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  filter(is.na(bc.length)) %>%
+  group_by(PATIENT) %>%
+  summarize(n_distinct(PATIENT)) %>%
+  tally(n()) #95 women
+
+#Are these all women who have not stopped their birth control? Yes, see below. Note these may be cases of censoring.
+
+durationsFV %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  filter(is.na(bc.stop)) %>%
+  group_by(PATIENT) %>%
+  summarize(n_distinct(PATIENT)) %>%
+  tally(n()) #Also 95 women. 
+
+#Could some of these women have just left the hopsital? If last encounter date is a year prior to 2017-10-27, then the type of birth control needs to be checked and it could be possible... 
+
+durationsFV %>% filter(bc.yes==1) %>%
+  group_by(PATIENT, bc.type) %>%
+  filter(is.na(bc.length), bc.start < "2016-10-27") %>%
+  group_by(PATIENT) %>% 
+  summarize(n_distinct(PATIENT)) %>%
+  tally(n()) #There are 13 women like this. 
+
+durationsFV %>% filter(bc.yes==1) %>%
+  select(-en.id, -en.code, -en.date, -en.descr, -en.reasoncode, -en.reasondescr, -meds.encount) %>% #cleaning up dataframe to only look at patients of interest
+  group_by(PATIENT, bc.type) %>%
+  filter(is.na(bc.length), bc.start < "2016-10-27") %>%
+  distinct()
+```
+
+### What to do with the following 13 patients? 
+
+Birth control prescription length (see doc on Piazza) to be confirmed in order to address the following. 
+
+* Patient number 0632f144-2ea4-43e3-b115-a535a4d6f323
+  + Started bc (ring) on 2005-12-18.
+  + Had only one encounter date, 2006-01-25.
+  + Censored observation?
+
+* Patient number 16077486-5747-4abe-8321-ba290fb7197c
+  + Started bc (pill28) on 1998-01-14.
+  + Had only one encounter date, 1998-08-21.
+  + Censored observation?
+
+* Patient number 353c5ff1-6970-4dba-ae96-1f69fb02f23e
+  + Started bc (injection) on 2013-07-31.
+  + Last encounter date was 2013-11-05.
+  + Censored observation? 
+
+* Patient number 6059a250-fc18-4b64-bf6d-967848ae252e
+  + Started bc (pill28) on 2007-09-19	
+  + Last encounter was 2008-07-25. 
+  + Censored observation? 
+
+* Patient number 72f7b009-e5e2-430d-ab43-74c1271a4dd5
+  + Started bc (pill28) on 2004-08-22
+  + Had only one encounter date, 2005-04-24.
+  + Censored observation? 
+
+* Patient number 7c204f7d-dccd-4e4a-9c45-9c6f4d40a516
+  + Started bc (IUD) on 2004-09-21.
+  + Had only one encounter date 2005-04-19.
+  + Censored observation? 
+
+* Patient number 85a0e9a4-afd3-47db-8007-7ba43a8fbddc
+  + Started bc (implant) on 2015-10-12.
+  + Last encounter date was 2016-06-04.
+  + Censored observation? 
+
+* Patient number 8a4c76ce-1710-4632-ac34-7eaedcba5595
+  + Started bc (implant) on 2009-04-13.
+  + Last encounter date was 2010-01-11.
+  + Censored observation? 
+
+* Patient number a00d4729-aab3-4308-9c95-6012926d6ea3
+  + Started bc (pill28) 2004-08-29.
+  + Had only one encounter date, 2005-04-24.
+  + Censored observation? 
+
+* Patient number b5ff95c6-b88a-478e-8416-671f0883c054
+  + Started bc (pill28) on 2001-06-07.
+  + Had only on encounter date, 2001-06-20.
+  + Censored observation? 
+
+* Patient number d0723d88-4368-4f06-9dca-51815e6fc767
+  + Started bc (IUD) on 2006-04-25.
+  + Had only one encounter date, 2006-06-09.
+  + Censored observation?
+
+* Patient number d538bb58-f5ce-4609-83cf-bfc495616eda
+  + Started bc (pill28) on 2001-02-22.
+  + Had only one encounter date, 2001-06-01.
+  + Censored observation? 
+
+* Patient number d53eb441-cb33-48d4-ba97-252eca3b41ff
+  + Started bc (pill28) on 2007-12-03.
+  + Last encounter date was 2008-03-18.
+  + Censored observation? 
+
+How many users of each type of birth control do we have? 
+
+```{r}
+#How many users of each type of birth control do we have?
+library(compareGroups)
+
+num_bc_type <- durationsFV %>% group_by(PATIENT, bc.type) %>%
+  filter(bc.yes==1) %>%
+  count(PATIENT, bc.type) %>% #Issue - is there a way to do this without "count()"?
+  select(bc.type)
+descrTable(num_bc_type) #Notice higher N than bc users, some are using more than one type at different time points.
+```
+
+How long, on average, did patients spend on each birth control type? What was the standard deviation of birth control use, per type? 
+
+```{r}
+sumstats <- durationsFV %>% select(-en.id) %>% #removing encounter-specific data
+  filter(bc.yes==1, !is.na(bc.length)) %>% #only bc users who we observed stopping bc
+  distinct() %>% #only unique observations
+  group_by(bc.type) %>%
+  mutate(avg.bc.length = mean(bc.length), sd.bc.length = sd(bc.length))
+tbl_df(sumstats)
+```
 
